<resources>
    <string name="app_name">Sherlock Travel Helper</string>
    <string name="action_settings">Settings</string>
    <string name="countryDestinationSelect">Destination (if U.S. territory, select U.S.)</string>
    <string name="countryOriginSelect">Country of Origin (if U.S. territory, select U.S.)</string>
    <string name="destinationHeading">Destination Information</string>
    <string name="endDateSelect">Choose when your trip will end</string>
    <string name="eventHint">My trip</string>
    <string name="eventNameHeading">Event Name</string>
    <string name="passportSameSelect">Passport is from country of origin</string>
    <string name="passportSelect">Select the country where your passport is from</string>
    <string name="reasonSelect">Reason for travel</string>
    <string name="specificCountrySelect">Select a country for more information</string>
    <string name="specificStateSelect">Select a U.S. state for more information</string>
    <string name="startDateSelect">Choose when your trip will start</string>
    <string name="stateDestinationSelect">State or U.S. Territory Destination</string>
    <string name="stateHeading">State Information</string>
    <string name="stateOriginSelect">State or U.S. Territory of Origin</string>
    <string name="tripHeading">Trip information</string>
    <string name="bulletinMenu">Visa Bulletin</string>
    <string name="calendarMenu">Calendar</string>
    <string name="constitutionMenu">U.S. Constitution</string>
    <string name="createEvent">Create Trip</string>
    <string name="definitionsMenu">Definitions</string>
    <string name="deleteEvent">Delete Trip</string>
    <string name="documentsMenu">Documents</string>
    <string name="editEvent">Update Trip</string>
    <string name="emergencyCall">Emergency</string>
    <string name="newEvent">New Trip</string>
    <string name="udhrMenu">Universal Declaration of Human Rights</string>
    <string name="vccrMenu">Vienna Convention on Consular Relations</string>
    <string name="viewAll">All Events</string>
    <string name="viewSingle">View</string>
    <string name="worldMenu">World Info</string>
    <string name="Sunday">Sun</string>
    <string name="Monday">Mon</string>
    <string name="Tuesday">Tue</string>
    <string name="Wednesday">Wed</string>
    <string name="Thursday">Thur</string>
    <string name="Friday">Fri</string>
    <string name="Saturday">Sat</string>
    <string name="employmentBulletinHeading">Employment-based immigration bulletin</string>
    <string name="f1">F1: Unmarried Sons and Daughters of U.S. Citizens</string>
    <string name="f2a">F2A: Spouses and Children of Permanent Residents</string>
    <string name="f2b">F2B: Unmarried Sons and Daughters (21 years of age or older) of Permanent Residents</string>
    <string name="f3">F3: Married Sons and Daughters of U.S. Citizens</string>
    <string name="f4">F4: Brothers and Sisters of Adult U.S. Citizens</string>
    <string name="familyBulletinHeading">Family-based immigration bulletin</string>
    <string name="first">First: Priority Workers</string>
    <string name="fourth">Fourth: Certain Special Immigrants</string>
    <string name="immigrantOriginSelect">Choose the country of origin of the immigrant</string>
    <string name="nrc">Fifth: Non-regional center (C5 and T5)</string>
    <string name="ow">Other Workers</string>
    <string name="preference">Preference</string>
    <string name="processing">Processing Date</string>
    <string name="rc">Fifth: Regional Center (I5 and R5)</string>
    <string name="religious">Certain Religious Workers</string>
    <string name="second">Second: Members of the Professions Holding Advanced Degrees or Persons of Exceptional Ability</string>
    <string name="third">Third: Skilled Workers, Professionals</string>
    <string name="advisory">Travel advisory\u0020</string>
    <string name="business">business</string>
    <string name="capital">Capital:\u0020</string>
    <string name="circuit">Federal Circuit:\u0020</string>
    <string name="consulateNumber">\u0020consulate phone number:\u0020</string>
    <string name="currency">Currency:\u0020</string>
    <string name="dueToConnector">\u0020due to\u0020</string>
    <string name="emergencyNumber">Emergency phone number:\u0020</string>
    <string name="eventDefault">No Upcoming Trips</string>
    <string name="forConnector">\u0020for\u0020</string>
    <string name="from">From\u0020</string>
    <string name="fromConnector">\u0020from\u0020</string>
    <string name="language">Language(s):\u0020</string>
    <string name="lvl1">level 1, exercise normal precautions</string>
    <string name="lvl2">level 2, exercise increased caution</string>
    <string name="lvl3">level 3, reconsider travel</string>
    <string name="lvl4">level 4, do not travel</string>
    <string name="nationality">Nationality (adj):\u0020</string>
    <string name="other">other</string>
    <string name="passportFrom">Passport from\u0020</string>
    <string name="sanctuaryAreaAll">All areas are sanctuary areas within the state</string>
    <string name="sanctuaryAreaNone">There are no sanctuary areas within the state</string>
    <string name="sanctuaryAreas">Sanctuary areas:\u0020</string>
    <string name="sanctuaryStateNo">\u0020is not a sanctuary state</string>
    <string name="sanctuaryStateYes">\u0020is a sanctuary state</string>
    <string name="school">education</string>
    <string name="toConnector">\u0020to\u0020</string>
    <string name="tourism">tourism</string>
    <string name="travelFrom">Traveling from\u0020</string>
    <string name="upcomingEvent">Upcoming Trip</string>
    <string name="vccrEndNo">\u0020is not a party to the V.C.C.R.</string>
    <string name="vccrEndYes">\u0020is a party to the V.C.C.R.</string>
    <string name="vccrStart">In case of arrest\u0020</string>
    <string name="work">work</string>
    <string name="copyError">There was an error copying the database</string>
    <string name="copySuccess">Database copied successfully</string>
    <string name="creationSuccess">Trip planned</string>
    <string name="deletionSuccess">Trip deleted</string>
    <string name="fillAll">Please make sure all information has been added</string>
    <string name="noID">There is no trip associated with that ID</string>
    <string name="updateError">There was an error upgrading the database</string>
    <string name="updateSuccess">Database upgraded successfully</string>
    <string name="defBulletinAll">All Chargeability: All countries which are not those specifically listed in the visa bulletin.</string>
    <string name="defBulletinEmployment">Employment-based: Bringing immigrants in to work within the United States. Some of these are short-term while some are long-term. Immigrants require a sponsor for this.</string>
    <string name="defBulletinFamily">Family-based: Bringing family to the United States. With the exception of one preference, this is United States Citizens bringing close immigrant relatives to the United States.</string>
    <string name="defBulletinHeading">Visa Bulletin</string>
    <string name="defBulletinPreference">Preference: Because the United States works on a quota system, preferences are used to dictate how many of a certain class of immigrant is allowed into the country.</string>
    <string name="defBulletinProcessing">Processing Date: This is the date for which applications are being processed. Think of it as how far back the backlog is for the visa program.</string>
    <string name="defBulletinVisa">Visa Bulletin: A publication on immigration in the United States which details which immigration visas are being processed depending on a variety of factors. You can think of this as a waiting list for immigrants.</string>
    <string name="defCountryCons">Consulate: These provide valuable services to travelers. While the phone numbers included in this app are to US consulates, most countries have their own consulates throughout the world to assist their own citizens.</string>
    <string name="defCountryCurr">Currency: The local currency used and accepted.</string>
    <string name="defCountryHeading">Country Information</string>
    <string name="defCountryLang">Language: The common language spoken in the country. This is not exclusive, and many other languages may be spoken within the country. The ones included are often de facto languages or official languages.</string>
    <string name="defCountryNat">Nationality (adj): The nationality of the people of the country. The nationality provided is the adjective form.</string>
    <string name="defDocCon">Constitution: The United State Constitution. The founding document of the United States. This document lays out how the US government functions as well as the rights of those within the United States. It is included as everyone traveling to or from the United States should at least have it available to them.</string>
    <string name="defDocUDHR">UDHR: The Universal Declaration of Human Rights. While not legally binding on its own, this document lays out the basic human rights every human being holds and is the basis for some customary international law. It is included as everyone should have access to and know their human rights.</string>
    <string name="defDocumentHeading">Documents</string>
    <string name="defDocVCCR">VCCR: The Vienna Convention on Consular Relations. While most of the document is not helpful to most travelers, Article 36 allows a traveler to request that their consulate be notified of their arrest if they so choose so long as the countries are a party to the VCCR. The full text is included for completeness.</string>
    <string name="defEventBusiness">Business: Short-term business trips. These will often involve traveling for a meeting, negotiating a contract, settling an estate, or meeting with business partners. If you plan on earning an income from the destination country, do not select this.</string>
    <string name="defEventCDestination">Destination Country: The country you are traveling to.</string>
    <string name="defEventCOrigin">Country of Origin: The country you are traveling from. </string>
    <string name="defEventEducation">Education: You plan on attending a school or university while you are traveling.</string>
    <string name="defEventEnd">End date: The day you plan on returning to the country of origin.</string>
    <string name="defEventHeading">Events and Trips</string>
    <string name="defEventName">Event Name: A name to describe your trip so that you can easily remember it or pick it out among any other trips you plan.</string>
    <string name="defEventOther">Other: Your plans do not fit within the other categories. Common examples include but are not limited to: marriage, investment, acting as an informant, participating in a lawsuit.</string>
    <string name="defEventReason">Reason: The reason for the trip. It is important the correct category is chosen as many visa requirements depend on the type of trip being taken.</string>
    <string name="defEventSDestination">Destination State: Only shown and selected if the United States is selected as the destination. This is to specify which specific state you are traveling to.</string>
    <string name="defEventSOrigin">State of Origin: Only shown and selected if the United States is selected as the country of origin. This is to specify which specific state you are leaving from.</string>
    <string name="defEventStart">Start date: The day you plan on leaving for the trip.</string>
    <string name="defEventTourism">Tourism: Vacation. You will not be selling or making any money. You are simply traveling as a tourist.</string>
</resources>