<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="e.chris.sherlocktravelhelper.calendarCreateEvent">

    <ScrollView
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eventNameHeading" />

            <EditText
                android:id="@+id/eventName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text="@string/eventHint" />

            <TextView
                android:id="@+id/startText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/startDateSelect" />

            <TextView
                android:id="@+id/startDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Select Date"
                android:textSize="30dp"/>

            <TextView
                android:id="@+id/endText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/endDateSelect" />

            <TextView
                android:id="@+id/endDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Select Date"
                android:textSize="30dp"/>

            <TextView
                android:id="@+id/originText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/countryOriginSelect" />

            <Spinner
                android:id="@+id/originSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/country_list"
                android:spinnerMode="dialog"
                android:visibility="visible" />

            <TextView
                android:id="@+id/stateOriginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stateOriginSelect"
                android:visibility="gone" />

            <Spinner
                android:id="@+id/stateOriginSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/state_list"
                android:spinnerMode="dialog"
                android:visibility="gone" />

            <TextView
                android:id="@+id/destinationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/countryDestinationSelect" />

            <Spinner
                android:id="@+id/destinationSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                android:entries="@array/country_list"/>

            <TextView
                android:id="@+id/stateDestinationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stateDestinationSelect"
                android:visibility="gone" />

            <Spinner
                android:id="@+id/stateDestinationSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/state_list"
                android:spinnerMode="dialog"
                android:visibility="gone" />

            <CheckBox
                android:id="@+id/passportCheckbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/passportSameSelect" />

            <Spinner
                android:id="@+id/passportSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/country_list"
                android:visibility="gone" />

            <TextView
                android:id="@+id/reasonText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reasonSelect" />

            <Spinner
                android:id="@+id/reasonSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                android:entries="@array/reason_list"/>

            <Button
                android:id="@+id/btnCreateEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:background="@drawable/rounded_corners"
                android:text="@string/createEvent" />

            <Button
                android:id="@+id/btnView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:background="@drawable/rounded_corners"
                android:text="@string/viewSingle" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
